--- a/GUIs/resources/status_bar_night_brief.ui
+++ b/GUIs/resources/status_bar_night_brief.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>935</width>
+    <width>498</width>
     <height>755</height>
    </rect>
   </property>
@@ -15,7 +15,7 @@
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
-    <layout class="QGridLayout" name="gridLayout">
+    <layout class="QGridLayout" name="gridLayout" columnminimumwidth="30,30,30,30,30,30,30,30,30,30,30,30">
      <item row="0" column="0" colspan="12">
       <widget class="QLabel" name="label">
        <property name="text">
@@ -77,7 +77,7 @@
       </widget>
      </item>
      <item row="19" column="6" colspan="2">
-      <widget class="QLabel" name="wl_tc_val">
+      <widget class="WL_tc" name="wl_tc_val">
        <property name="styleSheet">
         <string notr="true">background-color: #c7c7c7</string>
        </property>
@@ -119,7 +119,7 @@
       </widget>
      </item>
      <item row="24" column="10" colspan="2">
-      <widget class="QLabel" name="track_cam_ndr_val">
+      <widget class="Track_cam_ndr" name="track_cam_ndr_val">
        <property name="styleSheet">
         <string notr="true">background-color: #c7c7c7</string>
        </property>
@@ -399,7 +399,7 @@
       </widget>
      </item>
      <item row="24" column="2" colspan="2">
-      <widget class="QLabel" name="track_cam_tint_val">
+      <widget class="Track_cam_tint" name="track_cam_tint_val">
        <property name="styleSheet">
         <string notr="true">background-color: #c7c7c7</string>
        </property>
@@ -422,7 +422,7 @@
       </widget>
      </item>
      <item row="23" column="10" colspan="2">
-      <widget class="QLabel" name="track_cam_temp_val">
+      <widget class="Track_cam_temp" name="track_cam_temp_val">
        <property name="styleSheet">
         <string notr="true">background-color: #c7c7c7</string>
        </property>
@@ -510,7 +510,7 @@
       </widget>
      </item>
      <item row="13" column="10" colspan="2">
-      <widget class="QLabel" name="track_valid_val">
+      <widget class="Track_valid" name="track_valid_val">
        <property name="styleSheet">
         <string notr="true">background-color: #c7c7c7</string>
        </property>
@@ -619,7 +619,7 @@
       </widget>
      </item>
      <item row="16" column="2" colspan="2">
-      <widget class="QLabel" name="track_avg_val">
+      <widget class="Track_avg" name="track_avg_val">
        <property name="styleSheet">
         <string notr="true">background-color: #c7c7c7</string>
        </property>
@@ -642,7 +642,7 @@
       </widget>
      </item>
      <item row="24" column="6" colspan="2">
-      <widget class="QLabel" name="track_cam_fps_val">
+      <widget class="Track_cam_fps" name="track_cam_fps_val">
        <property name="styleSheet">
         <string notr="true">background-color: #c7c7c7</string>
        </property>
@@ -665,7 +665,7 @@
       </widget>
      </item>
      <item row="25" column="3" colspan="3">
-      <widget class="QLabel" name="track_cam_crop_val">
+      <widget class="Track_cam_crop" name="track_cam_crop_val">
        <property name="styleSheet">
         <string notr="true">background-color: #c7c7c7</string>
        </property>
@@ -995,7 +995,7 @@
       </widget>
      </item>
      <item row="25" column="10" colspan="2">
-      <widget class="QLabel" name="track_cam_crop_y_val">
+      <widget class="Track_cam_crop_y" name="track_cam_crop_y_val">
        <property name="styleSheet">
         <string notr="true">background-color: #c7c7c7</string>
        </property>
@@ -1146,7 +1146,7 @@
       </widget>
      </item>
      <item row="19" column="10" colspan="2">
-      <widget class="QLabel" name="wl_scf_val">
+      <widget class="WL_ScF" name="wl_scf_val">
        <property name="styleSheet">
         <string notr="true">background-color: #c7c7c7</string>
        </property>
@@ -1185,7 +1185,7 @@
       </widget>
      </item>
      <item row="25" column="7" colspan="2">
-      <widget class="QLabel" name="track_cam_crop_x_val">
+      <widget class="Track_cam_crop_x" name="track_cam_crop_x_val">
        <property name="styleSheet">
         <string notr="true">background-color: #c7c7c7</string>
        </property>
@@ -1298,6 +1298,61 @@
   </customwidget>
   <customwidget>
    <class>Usr_offset_y</class>
+   <extends>QLabel</extends>
+   <header>night_view_widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Track_avg</class>
+   <extends>QLabel</extends>
+   <header>night_view_widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>WL_tc</class>
+   <extends>QLabel</extends>
+   <header>night_view_widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>WL_ScF</class>
+   <extends>QLabel</extends>
+   <header>night_view_widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Track_valid</class>
+   <extends>QLabel</extends>
+   <header>night_view_widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Track_cam_temp</class>
+   <extends>QLabel</extends>
+   <header>night_view_widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Track_cam_tint</class>
+   <extends>QLabel</extends>
+   <header>night_view_widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Track_cam_fps</class>
+   <extends>QLabel</extends>
+   <header>night_view_widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Track_cam_ndr</class>
+   <extends>QLabel</extends>
+   <header>night_view_widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Track_cam_crop</class>
+   <extends>QLabel</extends>
+   <header>night_view_widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Track_cam_crop_x</class>
+   <extends>QLabel</extends>
+   <header>night_view_widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Track_cam_crop_y</class>
    <extends>QLabel</extends>
    <header>night_view_widgets.h</header>
   </customwidget>
