--- a/GUIs/resources/status_bar_night_expanded.ui
+++ b/GUIs/resources/status_bar_night_expanded.ui
@@ -119,7 +119,7 @@
       </widget>
      </item>
      <item row="24" column="10" colspan="2">
-      <widget class="QLabel" name="track_cam_ndr_val">
+      <widget class="Track_cam_ndr" name="track_cam_ndr_val">
        <property name="styleSheet">
         <string notr="true">background-color: #c7c7c7</string>
        </property>
@@ -399,7 +399,7 @@
       </widget>
      </item>
      <item row="24" column="2" colspan="2">
-      <widget class="QLabel" name="track_cam_tint_val">
+      <widget class="Track_cam_tint" name="track_cam_tint_val">
        <property name="styleSheet">
         <string notr="true">background-color: #c7c7c7</string>
        </property>
@@ -422,7 +422,7 @@
       </widget>
      </item>
      <item row="23" column="10" colspan="2">
-      <widget class="QLabel" name="track_cam_temp_val">
+      <widget class="Track_cam_temp" name="track_cam_temp_val">
        <property name="styleSheet">
         <string notr="true">background-color: #c7c7c7</string>
        </property>
@@ -510,7 +510,7 @@
       </widget>
      </item>
      <item row="13" column="10" colspan="2">
-      <widget class="QLabel" name="track_valid_val">
+      <widget class="Track_valid" name="track_valid_val">
        <property name="styleSheet">
         <string notr="true">background-color: #c7c7c7</string>
        </property>
@@ -642,7 +642,7 @@
       </widget>
      </item>
      <item row="24" column="6" colspan="2">
-      <widget class="QLabel" name="track_cam_fps_val">
+      <widget class="Track_cam_fps" name="track_cam_fps_val">
        <property name="styleSheet">
         <string notr="true">background-color: #c7c7c7</string>
        </property>
@@ -665,7 +665,7 @@
       </widget>
      </item>
      <item row="25" column="3" colspan="3">
-      <widget class="QLabel" name="track_cam_crop_val">
+      <widget class="Track_cam_crop" name="track_cam_crop_val">
        <property name="styleSheet">
         <string notr="true">background-color: #c7c7c7</string>
        </property>
@@ -995,7 +995,7 @@
       </widget>
      </item>
      <item row="25" column="10" colspan="2">
-      <widget class="QLabel" name="track_cam_crop_y_val">
+      <widget class="Track_cam_crop_y" name="track_cam_crop_y_val">
        <property name="styleSheet">
         <string notr="true">background-color: #c7c7c7</string>
        </property>
@@ -1185,7 +1185,7 @@
       </widget>
      </item>
      <item row="25" column="7" colspan="2">
-      <widget class="QLabel" name="track_cam_crop_x_val">
+      <widget class="Track_cam_crop_x" name="track_cam_crop_x_val">
        <property name="styleSheet">
         <string notr="true">background-color: #c7c7c7</string>
        </property>
@@ -1291,7 +1291,7 @@
         <string notr="true">background-color: #c7c7c7</string>
        </property>
        <property name="text">
-        <string>----</string>
+        <string>Phase II</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -1324,7 +1324,7 @@
         <string notr="true">background-color: #c7c7c7</string>
        </property>
        <property name="text">
-        <string>----</string>
+        <string>Phase II</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -1337,7 +1337,7 @@
         <string notr="true">background-color: #c7c7c7</string>
        </property>
        <property name="text">
-        <string>----</string>
+        <string>Phase II</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -1350,7 +1350,7 @@
         <string notr="true">background-color: #c7c7c7</string>
        </property>
        <property name="text">
-        <string>----</string>
+        <string>Phase II</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -1363,7 +1363,7 @@
         <string notr="true">background-color: #c7c7c7</string>
        </property>
        <property name="text">
-        <string>----</string>
+        <string>Phase II</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -1376,7 +1376,7 @@
         <string notr="true">background-color: #c7c7c7</string>
        </property>
        <property name="text">
-        <string>----</string>
+        <string>Phase II</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -1471,7 +1471,7 @@
         <string notr="true">background-color: #c7c7c7</string>
        </property>
        <property name="text">
-        <string>----</string>
+        <string>Phase 1.5</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -1484,7 +1484,7 @@
         <string notr="true">background-color: #c7c7c7</string>
        </property>
        <property name="text">
-        <string>----</string>
+        <string>Phase 1.5</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -1517,7 +1517,7 @@
         <string notr="true">background-color: #c7c7c7</string>
        </property>
        <property name="text">
-        <string>----</string>
+        <string>Phase 1.5</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -1629,7 +1629,7 @@
         <string notr="true">background-color: #c7c7c7</string>
        </property>
        <property name="text">
-        <string>----</string>
+        <string>Phase II</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -1694,7 +1694,7 @@
         <string notr="true">background-color: #c7c7c7</string>
        </property>
        <property name="text">
-        <string>----</string>
+        <string>Phase II</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -1733,7 +1733,7 @@
         <string notr="true">background-color: #c7c7c7</string>
        </property>
        <property name="text">
-        <string>----</string>
+        <string>Phase II</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -1779,7 +1779,7 @@
         <string notr="true">background-color: #c7c7c7</string>
        </property>
        <property name="text">
-        <string>----</string>
+        <string>Phase II</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -1825,7 +1825,7 @@
         <string notr="true">background-color: #c7c7c7</string>
        </property>
        <property name="text">
-        <string>----</string>
+        <string>Phase II</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -1848,7 +1848,7 @@
         <string notr="true">background-color: #c7c7c7</string>
        </property>
        <property name="text">
-        <string>----</string>
+        <string>Phase II</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -1886,7 +1886,7 @@
       </widget>
      </item>
      <item row="16" column="10" colspan="2">
-      <widget class="QLabel" name="calib_out_val">
+      <widget class="Calib_out" name="calib_out_val">
        <property name="styleSheet">
         <string notr="true">background-color: #c7c7c7</string>
        </property>
@@ -2313,7 +2313,7 @@
       </widget>
      </item>
      <item row="16" column="6" colspan="2">
-      <widget class="QLabel" name="calib_in_val">
+      <widget class="Calib_in" name="calib_in_val">
        <property name="styleSheet">
         <string notr="true">background-color: #c7c7c7</string>
        </property>
@@ -2511,6 +2511,56 @@
   </customwidget>
   <customwidget>
    <class>WL_ScF</class>
+   <extends>QLabel</extends>
+   <header>night_view_widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Track_valid</class>
+   <extends>QLabel</extends>
+   <header>night_view_widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Track_cam_temp</class>
+   <extends>QLabel</extends>
+   <header>night_view_widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Track_cam_tint</class>
+   <extends>QLabel</extends>
+   <header>night_view_widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Track_cam_fps</class>
+   <extends>QLabel</extends>
+   <header>night_view_widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Track_cam_ndr</class>
+   <extends>QLabel</extends>
+   <header>night_view_widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Track_cam_crop</class>
+   <extends>QLabel</extends>
+   <header>night_view_widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Track_cam_crop_x</class>
+   <extends>QLabel</extends>
+   <header>night_view_widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Track_cam_crop_y</class>
+   <extends>QLabel</extends>
+   <header>night_view_widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Calib_in</class>
+   <extends>QLabel</extends>
+   <header>night_view_widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Calib_out</class>
    <extends>QLabel</extends>
    <header>night_view_widgets.h</header>
   </customwidget>
